[package]
name = "gloo-websocket"
version = "0.1.0"
authors = ["Rust and WebAssembly Working Group"]
edition = "2018"

[dependencies]
backoff = "0.1"
futures = "0.1"
gloo-events = { version = "0.1.0", path = "../events" }
js-sys = "0.3.17"
wasm-bindgen = "0.2.40"

[dependencies.web-sys]
version = "0.3.17"
features=["BinaryType", "Event", "MessageEvent", "WebSocket", "Window"]
